[workspace]
resolver = "2"
members = [
  "notify",
  "notify-types",
  "notify-debouncer-mini",
  "notify-debouncer-full",
  "file-id",
  "examples",
]
exclude = [
  "examples/hot_reload_tide", # excluded until https://github.com/rustsec/rustsec/issues/501 is resolved
]

[workspace.package]
rust-version = "1.72"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
edition = "2021"

[workspace.dependencies]
bitflags = "2.6.0"
crossbeam-channel = "0.5.13"
deser-hjson = "2.2.4"
env_logger = "0.11.5"
file-id = { path = "file-id" }
filetime = "0.2.25"
fsevent-sys = "4.1.0"
futures = "0.3.30"
inotify = { version = "0.11.0", default-features = false }
insta = "1.40.0"
kqueue = "1.0.8"
libc = "0.2.158"
log = "0.4.22"
mio = { version = "1.0.2", features = ["os-ext"] }
mock_instant = "0.5.1"
instant = "0.1.13"
nix = "0.29.0"
notify = { path = "notify" }
notify-debouncer-full = { path = "notify-debouncer-full" }
notify-debouncer-mini = { path = "notify-debouncer-mini" }
notify-types = { path = "notify-types" }
pretty_assertions = "1.4.1"
rand = "0.8.5"
rstest = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
walkdir = "2.5.0"
windows-sys = "0.59.0"
