[workspace]
resolver = "2"
members = [
  "notify",
  "notify-types",
  "notify-debouncer-mini",
  "notify-debouncer-full",
  "file-id",
  "examples",
]
exclude = [
  "examples/hot_reload_tide", # excluded until https://github.com/rustsec/rustsec/issues/501 is resolved
]

[workspace.package]
rust-version = "1.72"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
edition = "2021"

[workspace.dependencies]
bitflags = "2.3.0"
crossbeam-channel = "0.5.0"
deser-hjson = "2.2.4"
env_logger = "0.11.2"
file-id = { path = "file-id" }
filetime = "0.2.22"
fsevent-sys = "4.0.0"
futures = "0.3.30"
inotify = { version = "0.10.2", default-features = false }
insta = "1.34.0"
kqueue = "1.0.8"
libc = "0.2.4"
log = "0.4.17"
mio = { version = "1.0", features = ["os-ext"] }
instant = "0.1.12"
nix = "0.27.0"
notify = { path = "notify" }
notify-debouncer-full = { path = "notify-debouncer-full" }
notify-debouncer-mini = { path = "notify-debouncer-mini" }
notify-types = { path = "notify-types" }
pretty_assertions = "1.3.0"
rand = "0.8.5"
rstest = "0.21.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
tempfile = "3.10.0"
walkdir = "2.4.0"
windows-sys = "0.52.0"
