[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>", "Colin Rofls <colin@cmyr.net>"]
name = "notify-backend-fsevent"
version = "0.1.0"
workspace = ".."

[dependencies]
libc = "*"
futures = "0.1.10"
fsevent = "0.2"
fsevent-sys = "0.1.6"
tempdir = "0.3.5"

[dependencies.notify-backend]
path = "../backend"
