[package]
authors = [
    "FeÌlix Saparelli <felix@passcod.name>",
    "Daniel Faust <hessijames@gmail.com>",
]
name = "notify-backend-poll-tree"
version = "0.1.0"

[dependencies]
futures = "0.1.10"
tokio = "0.1.1"
tempdir = "0.3.5"
walkdir = "1.0.7"
id_tree = "1.2.0"
filetime = "0.1.14"

[dev-dependencies]
tempdir = "0.3.5"

[dependencies.notify-backend]
path = "../backend"
