[package]
authors = [
    "FeÌlix Saparelli <felix@passcod.name>",
    "Daniel Faust <hessijames@gmail.com>",
]
name = "notify-backend-poll-tree"
version = "0.1.0"
workspace = ".."

[dependencies]
tokio = "0.1.8"
walkdir = "1.0.7"
id_tree = "1.2.0"
filetime = "0.1.14"

[dependencies.notify-backend]
path = "../backend"
