[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
name = "notify-backend"
version = "1.0.0"
edition = "2018"

[features]
default = ["serde"]

[dependencies]
anymap = "0.12.1"
futures-preview = "0.3.0-alpha.13"
mio = "0.6.16"
serde = { version = "1.0.89", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.39"
