[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
notify = { version = "6.0.0", path = "../notify" }
notify-debouncer-mini = { version = "0.2.0", path = "../notify-debouncer-mini" }
notify-debouncer-refined = { version = "0.1.0", path = "../notify-debouncer-refined" }
futures = "0.3"
tempfile = "3.5.0"

[[example]]
name = "async_monitor"
path = "async_monitor.rs"

[[example]]
name = "monitor_raw"
path = "monitor_raw.rs"

[[example]]
name = "debounced"
path = "debounced.rs"

[[example]]
name = "debounced_custom"
path = "debounced_full_custom.rs"

[[example]]
name = "debounced_refined"
path = "debounced_refined.rs"

[[example]]
name = "poll_sysfs"
path = "poll_sysfs.rs"

[[example]]
name = "watcher_kind"
path = "watcher_kind.rs"

# specifically in its own sub folder
# to prevent cargo audit from complaining
#[[example]]
#name = "hot_reload_tide"