[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
notify = { version = "6.1.1", path = "../notify" }
notify-debouncer-mini = { version = "0.4.1", path = "../notify-debouncer-mini" }
notify-debouncer-full = { version = "0.3.1", path = "../notify-debouncer-full" }
futures = "0.3"
tempfile = "3.5.0"
log = "0.4.17"
env_logger = "0.10.0"

[[example]]
name = "async_monitor"
path = "async_monitor.rs"

[[example]]
name = "monitor_raw"
path = "monitor_raw.rs"

[[example]]
name = "monitor_debounced"
path = "monitor_debounced.rs"

[[example]]
name = "debouncer_mini"
path = "debouncer_mini.rs"

[[example]]
name = "debouncer_mini_custom"
path = "debouncer_mini_custom.rs"

[[example]]
name = "debouncer_full"
path = "debouncer_full.rs"

[[example]]
name = "poll_sysfs"
path = "poll_sysfs.rs"

[[example]]
name = "watcher_kind"
path = "watcher_kind.rs"

[[example]]
name = "pollwatcher_scan"
path = "pollwatcher_scan.rs"

[[example]]
name = "pollwatcher_manual"
path = "pollwatcher_manual.rs"

# specifically in its own sub folder
# to prevent cargo audit from complaining
#[[example]]
#name = "hot_reload_tide"