[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
notify-debouncer-full = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "async_monitor"
path = "async_monitor.rs"

[[example]]
name = "monitor_raw"
path = "monitor_raw.rs"

[[example]]
name = "monitor_debounced"
path = "monitor_debounced.rs"

[[example]]
name = "debouncer_mini"
path = "debouncer_mini.rs"

[[example]]
name = "debouncer_mini_custom"
path = "debouncer_mini_custom.rs"

[[example]]
name = "debouncer_full"
path = "debouncer_full.rs"

[[example]]
name = "poll_sysfs"
path = "poll_sysfs.rs"

[[example]]
name = "watcher_kind"
path = "watcher_kind.rs"

[[example]]
name = "pollwatcher_scan"
path = "pollwatcher_scan.rs"

[[example]]
name = "pollwatcher_manual"
path = "pollwatcher_manual.rs"

# specifically in its own sub folder
# to prevent cargo audit from complaining
#[[example]]
#name = "hot_reload_tide"
