[package]
name = "file-id"
version = "0.1.0"
rust-version = "1.56"
description = "Platform independent file id library"
documentation = "https://docs.rs/notify"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
readme = "../README.md"
license = "CC0-1.0 OR Artistic-2.0"
keywords = ["filesystem", "inode", "file", "index"]
categories = ["filesystem"]
authors = ["Daniel Faust <hessijames@gmail.com>"]

edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
