[package]
name = "file-id"
version = "0.2.1"
rust-version = "1.60"
description = "Utility for reading inode numbers (Linux, MacOS) and file IDs (Windows)"
documentation = "https://docs.rs/notify"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "inode", "file", "index"]
categories = ["filesystem"]
authors = ["Daniel Faust <hessijames@gmail.com>"]

edition = "2021"

[[bin]]
name = "file-id"
path = "bin/file_id.rs"

[dependencies]
serde = { version = "1.0.89", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.2.0"
