[package]
name = "file-id"
version = "0.2.2"
description = "Utility for reading inode numbers (Linux, MacOS) and file IDs (Windows)"
documentation = "https://docs.rs/notify"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "inode", "file", "index"]
categories = ["filesystem"]
authors = ["Daniel Faust <hessijames@gmail.com>"]
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "file-id"
path = "bin/file_id.rs"

[dependencies]
serde = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile.workspace = true
