[package]
name = "notify-debouncer-full"
version = "0.5.0"
description = "notify event debouncer optimized for ease of use"
documentation = "https://docs.rs/notify-debouncer-full"
authors = ["Daniel Faust <hessijames@gmail.com>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["macos_fsevent"]
serde = ["notify-types/serde"]
web-time = ["notify-types/web-time"]
crossbeam-channel = ["dep:crossbeam-channel", "notify/crossbeam-channel"]
macos_fsevent = ["notify/macos_fsevent"]
macos_kqueue = ["notify/macos_kqueue"]
serialization-compat-6 = ["notify/serialization-compat-6"]

[dependencies]
notify.workspace = true
notify-types.workspace = true
crossbeam-channel = { workspace = true, optional = true }
file-id.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
serde.workspace = true
deser-hjson.workspace = true
rand.workspace = true
tempfile.workspace = true
