[package]
name = "notify-debouncer-mini"
version = "0.4.1"
description = "notify mini debouncer for events"
documentation = "https://docs.rs/notify-debouncer-mini"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "notify_debouncer_mini"
path = "src/lib.rs"

[features]
default = ["crossbeam","macos_fsevent"]
serde = ["notify-types/serde"]
# can't use dep:crossbeam-channel and feature name crossbeam-channel below rust 1.60
crossbeam = ["crossbeam-channel","notify/crossbeam-channel"]
serialization-compat-6 = ["notify/serialization-compat-6"]
macos_fsevent = ["notify/macos_fsevent"]
macos_kqueue = ["notify/macos_kqueue"]

[dependencies]
notify = { workspace = true, default-features = false }
notify-types = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
log = { workspace = true }
