[package]
name = "notify-debouncer-mini"
version = "0.7.0"
description = "notify mini debouncer for events"
documentation = "https://docs.rs/notify-debouncer-mini"
authors = ["Aron Heinecke <Ox0p54r36@t-online.de>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["macos_fsevent"]
serde = ["notify-types/serde"]
crossbeam-channel = ["dep:crossbeam-channel", "notify/crossbeam-channel"]
flume = ["dep:flume", "notify/flume"]
macos_fsevent = ["notify/macos_fsevent"]
macos_kqueue = ["notify/macos_kqueue"]
serialization-compat-6 = ["notify/serialization-compat-6"]

[dependencies]
notify.workspace = true
notify-types.workspace = true
crossbeam-channel = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
log.workspace = true
tempfile.workspace = true
