[package]
name = "notify-debouncer-refined"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "notify event debouncer optimized for ease of use"
documentation = "https://docs.rs/notify-debouncer-refined"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
authors = ["Daniel Faust <hessijames@gmail.com>"]
keywords = ["events", "filesystem", "notify", "watch"]
license = "CC0-1.0 OR Artistic-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "notify_debouncer_refined"
path = "src/lib.rs"

[features]
default = ["crossbeam"]
# can't use dep:crossbeam-channel and feature name crossbeam-channel below rust 1.60
crossbeam = ["crossbeam-channel","notify/crossbeam-channel"]

[dependencies]
notify = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
file-id = { workspace = true }
walkdir = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
mock_instant = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
deser-hjson = { workspace = true }
rand = { workspace = true }
