[package]
name = "notify"
version = "6.0.0"
rust-version = "1.56"
description = "Cross-platform filesystem notification library"
documentation = "https://docs.rs/notify"
homepage = "https://github.com/notify-rs/notify"
repository = "https://github.com/notify-rs/notify.git"
readme = "../README.md"
license = "CC0-1.0 OR Artistic-2.0"
keywords = ["events", "filesystem", "notify", "watch"]
categories = ["filesystem"]
authors = [
  "Félix Saparelli <me@passcod.name>",
  "Daniel Faust <hessijames@gmail.com>"
]

edition = "2021"

[dependencies]
bitflags = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
filetime = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, optional = true }
walkdir = { workspace = true }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
inotify = { workspace = true }
mio = { workspace = true }

[target.'cfg(target_os="macos")'.dependencies]
fsevent-sys = { workspace = true, optional = true }
kqueue = { workspace = true, optional = true }
mio = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(any(target_os="freebsd", target_os="openbsd", target_os = "netbsd", target_os = "dragonflybsd"))'.dependencies]
kqueue = { workspace = true }
mio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }

[features]
default = ["macos_fsevent","crossbeam-channel"]
timing_tests = []
manual_tests = []
macos_kqueue = ["kqueue", "mio"]
macos_fsevent = ["fsevent-sys"]
